# mayfly

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-build.yml
caddis/: Dockerfile  app.py  worker.py
caddis-frontend/: Dockerfile  index.html  nginx.conf
docs/: build.sh  docusaurus.config.js  package-lock.json  sidebars.js
docs/docs/: architecture.md  getting-started.md  intro.md
docs/docs/guides/: caddis.md  dragonfly.md  images.md  internal-albs.md  testing.md
docs/docs/spec/: apps.md  environment.md  services.md
docs/src/css/: custom.css
dragonfly/: Dockerfile  app.py
emulator/: Dockerfile  README.md
emulator/patches/: alb.py
examples/: env-alb.yaml  env-caches.yaml  env-minimal.yaml  env-pr.yaml  env.yaml  smoke-test.sh
hello/: Dockerfile  app.py
scripts/: e2e.sh  publish-images.sh  release.sh
src/mayfly/: __init__.py  cli.py  emulators.py  installer.py  k8s.py  manifests.py  naming.py  spec.py
src/mayfly/provisioners/: __init__.py  aws.py  native.py
tests/: test_backends.py  test_installer.py  test_manifests.py  test_naming.py  test_spec.py
website/: index.html
website/assets/: fonts.css
