[project]
name = "mayfly-cli"
version = "0.1.7"
description = "Short lived ephemeral environments on Kubernetes: one YAML spec, an isolated namespace with emulated AWS + real service pods, TTL teardown"
readme = "README.md"
requires-python = ">=3.9"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = ["ephemeral-environments", "kubernetes", "preview-environments", "aws-emulator", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "kubernetes>=29.0",
    "boto3>=1.34",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://mayfly.sh"
Documentation = "https://docs.mayfly.sh"
Repository = "https://github.com/jasondcamp/mayfly"
Issues = "https://github.com/jasondcamp/mayfly/issues"

[project.scripts]
mayfly = "mayfly.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mayfly"]

[tool.hatch.build.targets.sdist]
# the repo also holds the docs site (node_modules!), brand assets, and
# container build contexts — none of which belong in the Python sdist
only-include = ["src", "tests"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
